--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Gary天气(runoob.com)</title>
+<title>Gary天气</title>
 </head>
 <body>
     <h1>天气预报</h1>
